# cpp-playground

./: .gitignore  README.md  cpp_playground.cpp  flake.nix  main.cpp  meson.build
nix/: checks.nix  shells.nix
